# FORGE-MIND-AI

./: .gitignore  CMakeLists.txt  LICENSE
include/core/: Application.hpp
include/utils/: Logger.hpp
src/: main.cpp
src/core/: Application.cpp
src/utils/: Logger.cpp
